[gd_scene load_steps=5 format=3 uid="uid://domrgkk1pmqr7"]

[ext_resource type="Script" uid="uid://d3b2ft22wpanv" path="res://Scripts/game_over.gd" id="1_ek8ke"]
[ext_resource type="Texture2D" uid="uid://bct5coqvxs7bs" path="res://Arts/UI/Pain Hud.png" id="1_ojehl"]
[ext_resource type="FontFile" uid="uid://dojf4xr5s3tqx" path="res://Arts/Font/28 Days Later.ttf" id="2_8fo1c"]

[sub_resource type="LabelSettings" id="LabelSettings_ek8ke"]
font = ExtResource("2_8fo1c")
font_size = 100
outline_size = 5
outline_color = Color(0.537255, 0, 0.027451, 0.352941)
shadow_size = 20
shadow_color = Color(0, 0, 0, 0.286275)
shadow_offset = Vector2(9.82, 2.27)

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ek8ke")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ojehl")
expand_mode = 1

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 64.0
offset_bottom = 255.0
grow_horizontal = 2
text = "YOU DIED
*"
label_settings = SubResource("LabelSettings_ek8ke")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.5
offset_top = 14.0
offset_right = 45.5
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "YOUR SCORE: "
horizontal_alignment = 1

[node name="NameInput" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -122.0
offset_top = -206.0
offset_right = 122.0
offset_bottom = -178.0
grow_horizontal = 2
grow_vertical = 0
placeholder_text = "Your name"
alignment = 1

[node name="SaveScoreButton" type="Button" parent="." groups=["ui_buttons"]]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -88.0
offset_top = -121.0
offset_right = 88.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "SAVE SCORE"

[node name="SkipButton" type="Button" parent="." groups=["ui_buttons"]]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 237.0
offset_top = -121.0
offset_right = 413.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "SKIP"
